--- a/css/confirm_order.scss
+++ b/css/confirm_order.scss
@@ -24,7 +24,7 @@
         -o-border-radius: $size;
         border-radius: $size;
     }
-    
+
     #middle {
         .crumbs {
             margin-bottom: 22px;
@@ -168,8 +168,7 @@
                             .site {
                                 padding-right: 20px;
                             }
-                            .default,
-                            .edit {
+                            .default{
                                 float: right;
                                 cursor: pointer;
                                 color: #010101;
@@ -178,6 +177,14 @@
                             }
                             .edit {
                                 margin: 0 5px 0 19px;
+                                float: right;
+                                >a {
+                                    cursor: pointer;
+                                    color: #010101;
+                                    height: 32px;
+                                    line-height: 32px;
+                                    font-size: $proH4AndbottomH4AndDtAndServiceFontSize;
+                                }
                             }
                         }
                         >li:hover {
