--- a/css/public.scss
+++ b/css/public.scss
@@ -438,6 +438,7 @@ li {
             li {
                 float: left;
                 margin: 0 10px;
+                cursor: pointer;
                 a {
                     display: block;
                     img {
