--- a/css/pro_details.scss
+++ b/css/pro_details.scss
@@ -843,7 +843,7 @@ $telFontSize:36px;
             }
             .article {
                 width: calc(926px - 33px);
-                height: 125px;
+                padding-bottom: 7px;
                 border: 1px solid #aaa;
                 margin: 15px auto 6px auto;
                 position: relative;
