--- a/css/login.css
+++ b/css/login.css
@@ -136,12 +136,14 @@
   text-align: center;
   font-size: 14px;
   color: #666;
+  display: none;
 }
 
 #middle .main .other {
   width: 100%;
   text-align: center;
   margin-bottom: 6px;
+  display: none;
 }
 
 #middle .main .other ul {
