--- a/css/pro_details.css
+++ b/css/pro_details.css
@@ -19,6 +19,8 @@
 }
 
 #middle .section_top .pro_img .img_box img {
+  width: 100%;
+  height: 100%;
   display: block;
 }
 
@@ -518,7 +520,6 @@
 
 #middle .section_bottom .sidebar .hot_ad {
   width: 252px;
-  margin-top: 56px;
 }
 
 #middle .section_bottom .sidebar .hot_ad > h3 {
@@ -888,6 +889,7 @@
 #middle .section_bottom .pro_main {
   width: 946px;
   float: left;
+  margin-top: 26px;
 }
 
 #middle .section_bottom .pro_main .details {
